cooler font + fixed alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 * {
     cursor: url("../cursors/use3.cur"), auto;
+    font-family: "Lucida Console", "Courier New", monospace;
 }
 body {
     font-family: 'Lato', sans-serif;
@@ -51,13 +52,11 @@ p {
 
 .edu {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin:auto;
     width: 300px;
-    /* background-color: #000000; */
     border-radius: 30px;
-    /* color: white; */
 }
 
 
